--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tupsula-bus-timetable",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,9 +8,5 @@
   "keywords": [],
   "author": "sampozki",
   "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "ntp-client": "^0.5.3",
-    "ws": "^8.18.1"
-  }
+  "description": ""
 }
