--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tupsula-bus-timetable",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "helmet": "^8.0.0"
   }
 }
